--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <section class="content">
       <div class="image-box">
-        <img src="lambo.jpg" alt="A stunning Lamborghini" />
+        <img src="download.jpeg" alt="A stunning Lamborghini" />
       </div>
       <div class="text-box">
         <p>
